--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ configurations {
     compile.exclude module: 'commons-logging'
 }
 
-dependencies {	compile group: 'jstl', name: 'jstl', version: '1.2'    compile("org.springframework:spring-context:${springVersion}")
+dependencies {	
+	compile group: 'jstl', name: 'jstl', version: '1.2'    
+	compile("org.springframework:spring-context:${springVersion}")
     compile("org.springframework:spring-jdbc:${springVersion}")
     compile group: 'org.springframework', name: 'spring-web', version: "${springVersion}"
     compile group: 'org.springframework', name: 'spring-webmvc', version: "${springVersion}"
